# vector-search-util

./: .env_template  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_cline_mcp_settings.json
src/vector_search_util/: __main__.py
src/vector_search_util/_internal/db/: __init__.py
src/vector_search_util/_internal/langchain/: langchain_client.py  langchain_factory.py  langchain_vector_db.py
src/vector_search_util/_internal/log/: log_settings.py
src/vector_search_util/api/: api_server.py
src/vector_search_util/core/: app.py  client.py
src/vector_search_util/langchain/: langchain_client.py  langchain_vector_db.py  langchain_vector_db_chroma.py  langchain_vector_db_pgvector.py  models.py
src/vector_search_util/llm/: embedding_config.py
src/vector_search_util/mcp/: mcp_server.py
src/vector_search_util/model/: __init__.py  models.py
src/vector_search_util/util/: category_loader.py  client.py  embedding_loader.py  loader.py  vector_db_client.py
